# my_rs_ideas_playground

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
native/: closure_callback.c
src/: main.rs  utils.rs
src/nwg-webview/: builder.rs  mod.rs
