[package]
name = 'my_rs_ideas_playground'
edition = '2021'
rust-version = '1.68.0'
version = '0.1.0'

[package.metadata]
last-modified-system-time = 1699506431

[package.metadata.inwelling]
lens-rs_generator = true

[dependencies]
ambassador = '0.3.5'
async-std = '1.12.0'
bytes = "1.9.0"
cargo_toml = {version = '0.13.0', features = [], optional = true}
deferred-future = { version = "0.1.4", features = ["local"] }
delegate = '0.8.0'
derive_builder = '0.11.2'
embed-doc-image = '0.1.4'
futures = '0.3.28'
futures-time = '3.0.0'
lens-rs = '0.3.2'
libc = '0.2.147'
libui = '0.3'
locate-cargo-manifest = '0.2.2'
rayon = "1.10.0"
serde = {version = '1.0.144', features = ['alloc', 'derive'], default-features = false}
serde_json = '1.0.85'
toml = {version = '0.8.8', features = ['preserve_order']}

[target.'cfg(target_os = "macos")'.dependencies]
cacao = '0.3.2'

[target.'cfg(target_os = "windows")'.dependencies]
nwg = {version = "1.0.4", features = ["frame", "high-dpi"], package = "native-windows-gui"}
nwd = {version = "1.0.3", package = "native-windows-derive"}
webview2 = "0.1.4"
winapi = "0.3.9"

[build-dependencies]
cc = '1.0.52'

[features]
ambassador-where = []
cargo-metadata = ['cargo_toml']
default = []
toml-config = []
