[package]
name = 'my_rs_ideas_playground'
edition = '2021'
rust-version = '1.68.0'
version = '0.1.0'

[package.metadata]
last-modified-system-time = 1699506431

[package.metadata.inwelling]
lens-rs_generator = true

[dependencies]
ambassador = { version = "0.3.5", optional = true }
async-std = { version = '1.12.0', optional = true }
bytes = { version = "1.9.0", optional = true }
cargo_toml = {version = '0.13.0', features = [], optional = true }
deferred-future = { version = "0.1.4", features = ["local"], optional = true }
delegate = { version = '0.8.0', optional = true }
derive_builder = { version = '0.11.2', optional = true }
embed-doc-image = { version = '0.1.4', optional = true }
futures = { version = '0.3.28', optional = true }
futures-time = { version = '3.0.0', optional = true }
lens-rs = { version = '0.3.2', optional = true }
libc = { version = '0.2.147', optional = true }
locate-cargo-manifest = { version = '0.2.2', optional = true }
rayon = { version = "1.10.0", optional = true }
serde = { version = '1.0.144', features = ['alloc', 'derive'], default-features = false, optional = true }
serde_json = { version = '1.0.85', optional = true }
toml = { version = '0.8.8', features = ['preserve_order'], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = '0.3.2', optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
libui = { version = '0.3', optional = true }
nwg = { version = "1.0.4", features = ["frame", "high-dpi"], package = "native-windows-gui", optional = true }
# nwd = {version = "1.0.3", package = "native-windows-derive"}
webview2 = { version = "0.1.4", optional = true }
winapi = { version = "0.3.9", optional = true }

[build-dependencies]
cc = { version = '1.0.52', optional = true }

[features]
ambassador-where = []
default = []
toml-config = [ "toml" ]
